# Agent-Bench

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: eval_config.yaml
configs/domains/: cyber_sandbox.yaml  investment_advisor.yaml  pix_assist.yaml  sme_business_advisor.yaml
configs/judges/: default.yaml
configs/models/: athena_local.yaml  default.yaml
configs/suites/: all_domains.yaml  full_comparison.yaml  investment_basic.yaml  pix_basic.yaml
data/fixtures/: cyber_sandbox.yaml  investment_advisor.yaml  pix_assist.yaml  sme_business_advisor.yaml
datasets/adversarial/: data_exfiltration_like.yaml  privilege_escalation_like.yaml  prompt_injection_like.yaml  unsafe_autonomy_like.yaml
docs/: adjudication_guide.md  annotation_guide.md  benchmark_philosophy.md  data_governance.md  dataset_card_template.md  how_to_add_a_domain.md  how_to_run_evals.md  metrics.md
docs/architecture/: overview.md
docs/benchmark-methodology/: governance.md
docs/onboarding/: adding-domain.md  adding-provider.md
scripts/: check_gold_integrity.py  generate_synthetic.py  promote_to_gold.py
src/agent_bench/: __init__.py
templates/: gold_case_template.yaml
tests/: test_phase_d.py  test_phase_e.py  validate_improvements.py
tests/integration/: test_all_domains_suite.py  test_cli_smoke.py  test_investment_suite.py  test_suite_run.py
tests/unit/: test_adapters.py  test_athena_adapters.py  test_composite_judge.py  test_config.py  test_dataset_validator.py  test_gate.py  test_grounding_judge.py  test_html_report.py  test_judge.py  test_leaderboard.py  test_lineage.py  test_metrics.py  test_numeric_judge.py  (+7 more)
(+90 files in other folders)
