[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-bench"
version = "0.2.0"
description = "Multi-domain benchmark framework for evaluating LLM agents as complete systems"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = []
keywords = ["benchmark", "llm", "agents", "evaluation", "tool-use", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyarrow>=14.0",
    "httpx>=0.25",
    "structlog>=23.2",
]

[project.urls]
Repository = "https://github.com/agent-bench/agent-bench"
Documentation = "https://github.com/agent-bench/agent-bench/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]
openai = ["openai>=1.6"]
anthropic = ["anthropic>=0.18"]
all = ["agent-bench[openai,anthropic]"]

[project.scripts]
bench = "agent_bench.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
